apply reasonable codacy suggestions